[Function add]
1.Allocation of memory by JVM.
2. JVM monitor tools on windows and linux.